[gd_scene load_steps=2 format=3 uid="uid://lttu1b1kygi2"]

[ext_resource type="Script" path="res://menu_options.gd" id="2_uimo6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.192157, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Volatile
"
fit_content = true
autowrap_mode = 0

[node name="MenuItems" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NewGame" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuItems"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 35
text = "New Game"
fit_content = true
autowrap_mode = 0
script = ExtResource("2_uimo6")

[node name="Continue" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuItems"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 35
text = "Continue"
fit_content = true
autowrap_mode = 0
script = ExtResource("2_uimo6")

[node name="Settings" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuItems"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 35
text = "Settings
"
fit_content = true
autowrap_mode = 0
script = ExtResource("2_uimo6")

[node name="Credits" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuItems"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 35
text = "Credits
"
fit_content = true
autowrap_mode = 0
script = ExtResource("2_uimo6")

[node name="Exit" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuItems"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 35
text = "Exit"
fit_content = true
autowrap_mode = 0
script = ExtResource("2_uimo6")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/NewGame" to="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/NewGame" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/NewGame" to="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/NewGame" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Continue" to="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Continue" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Continue" to="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Continue" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Settings" to="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Settings" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Settings" to="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Settings" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Credits" to="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Credits" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Credits" to="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Credits" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Exit" to="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Exit" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Exit" to="MarginContainer/HBoxContainer/VBoxContainer/MenuItems/Exit" method="_on_mouse_exited"]
